# pv_rec

./: .gitignore  pyproject.toml
pv_rec/: data_classes.py  data_factory.py  ml_lib.py  recommender.py  web_crawler.py
pv_rec/test/: conftest.py  test_data_factory.py  test_ml_lib.py
pv_rec/test/data/test_data_factory/: wlw_test_data.csv
pv_rec/test/data/test_ml_lib/: encoded_products.pkl
tutorial/: 1_run_with_utils.ipynb
