[tool.poetry]
name = "pv_rec"
version = "0.1.2rc1"
description = ""
authors = ["Kaan Duran"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
coverage = "7.4.4"
pytest-cov = "5.0.0"
pytest = "^8.3.4"
textdistance = "^4.6.3"
beautifulsoup4 = "^4.12.3"
transformers = "^4.47.0"
jupyterlab = "^4.4.7"
sentence-transformers = "^3.3.1"
pydantic = "^2.10.4"
structlog = "^25.4.0"
pre-commit = "^4.3.0"
tqdm = "^4.67.1"
ipywidgets = "^8.1.7"
pandas = "^2.3.3"
python-dotenv = "^1.1.1"
matplotlib = "^3.10.7"
geopy = "^2.4.1"
pyproj = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"